fix: make quantity text input readable on mobile

--- a/src/app/cards/components/card-preview/card-preview.component.scss
+++ b/src/app/cards/components/card-preview/card-preview.component.scss
@@ -48,7 +48,18 @@
 
     .card-actions {
       display: flex;
+      align-items: center;
       gap: 0.5rem;
+    }
+  }
+}
+
+@media only screen and (max-width: 767px) {
+  .card {
+    .card-overlay {
+      .card-actions {
+        gap: 0.25rem;
+      }
     }
   }
 }
